<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.techgeekme.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My Nanodegree Apps!"
        android:textSize="25sp"
        android:id="@+id/txtV_heading"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/colorDefaultBtn"
        android:textColor="#FFFFFF"
        android:text="@string/btn_spotify"
        android:id="@+id/btn_spotify"
        android:layout_below="@+id/txtV_heading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/colorDefaultBtn"
        android:textColor="#FFFFFF"
        android:text="@string/btn_scores"
        android:id="@+id/btn_scores"
        android:layout_below="@+id/btn_spotify"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/colorDefaultBtn"
        android:textColor="#FFFFFF"
        android:text="@string/btn_library"
        android:id="@+id/btn_library"
        android:layout_below="@+id/btn_scores"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/colorDefaultBtn"
        android:textColor="#FFFFFF"
        android:text="@string/btn_build"
        android:id="@+id/btn_build"
        android:layout_below="@+id/btn_library"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/colorDefaultBtn"
        android:textColor="#FFFFFF"
        android:text="@string/btn_xyz"
        android:id="@+id/btn_xyz"
        android:layout_below="@+id/btn_build"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_capstone"
        android:background="@color/colorFinalBtn"
        android:id="@+id/btn_capstone"
        android:layout_below="@+id/btn_xyz"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />
</RelativeLayout>
